cabal-version: >=1.14
name: pinafore
version: 0.1
license: AllRightsReserved
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        time,
        containers,
        filepath,
        directory,
        cereal,
        uuid,
        aeson,
        sqlite-simple,
        mime,
        shapes,
        parsec,
        truth-core
    exposed-modules:
        Pinafore
        Pinafore.Window
        Pinafore.Query.Value
        Pinafore.Query.Expression
        Pinafore.Query
    other-modules:
        Pinafore.AsText
        Pinafore.Edit
        Pinafore.Query.Read
        Pinafore.Query.Predefined
        Pinafore.SQLite

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        containers,
        countable,
        mime,
        open-witness,
        template-haskell,
        transformers,
        witness,
        comonad,
        mono-traversable,
        shapes,
        truth-core,
        pinafore,
        QuickCheck,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-golden
    main-is: Main.hs
    other-modules:

executable pinafore
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        filepath,
        bytestring,
        glib,
        gtk3,
        shapes,
        truth-core,
        truth-gtk,
        pinafore,
        optparse-applicative
    main-is: Main.hs

executable pinafore-query
    hs-source-dirs: query
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wredundant-constraints
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        filepath,
        bytestring,
        shapes,
        truth-core,
        pinafore,
        optparse-applicative
    main-is: Main.hs
