cabal-version: >=1.14
name: reity
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD2
license-file: LICENSE
author: Ashley Yakeley
maintainer: ashley@yakeley.org
-- copyright:
category: Data
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options: -Wall
    build-depends:
        ghc-prim,
        base >= 4.9 && < 5,
        bytestring,
        --,template-haskell,
        --constraints,
        witness >= 0.4,
        open-witness >= 0.4,
        shapes
    exposed-modules:
        Data.Knowledge
        Data.Reity.Info
        Data.Reity.Match
        Data.Reity.HasInfo
        Data.Reity
