cabal-version: >=1.14
name: reity
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD2
license-file: LICENSE
author: Ashley Yakeley
maintainer: ashley@yakeley.org
-- copyright:
category: Data
build-type: Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options: -Wall
    build-depends:
        ghc-prim,
        base >= 4.9 && < 5,
        template-haskell,
        transformers,
        bytestring,
        uuid,
        witness >= 0.4,
        open-witness >= 0.4,
        countable,
        comonad,
        shapes
    exposed-modules:
        Language.Haskell.TH.SimpleType
        Data.Knowledge
        Data.Reity.ReasonM
        Data.Reity.Wit
        Data.Reity.TypeInfo
        Data.Reity.Match
        Data.Reity.Template
        Data.Reity.Instances
        Data.Reity

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options: -Wall
    build-depends:
        ghc-prim,
        base >= 4.9 && < 5,
        template-haskell,
        transformers,
        bytestring,
        witness >= 0.4,
        open-witness >= 0.4,
        countable,
        comonad,
        shapes,
        reity,
        tasty,
        tasty-hunit
    main-is: Main.hs
    other-modules:
        SimpleType
