cabal-version: >=1.14
name: shapes
version: 0.1.0.0
-- synopsis:
-- description:
license:  BSD2
license-file: LICENSE
author: Ashley Yakeley
maintainer: ashley@semantic.org
-- copyright:
category: Data
build-type: Simple
-- extra-source-files:

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        ConstraintKinds
        DataKinds
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options: -Wall
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        containers,
        transformers,
        mono-traversable,
        witness,
        open-witness
    exposed-modules:
        Data.KindCategory
        Data.Free
        Data.Category
        Data.ApStore
        Control.Applicative.Free
        Data.Functor.Free
        Data.Functor.Single
        Control.Monad.Free
        Control.Monad.Tunnel
        Control.Monad.Trans.State.Extra
        Control.Monad.IOInvert
        Control.Wait
        Data.Chain
        Data.Result
        Data.MonadOne
        Data.HasNewValue
        Data.Injection
        Data.Bijection
        Data.Lens
        Data.FloatingLens
        Data.Store
        Data.ConstFunction
        Data.Codec
        Data.Compose
        Data.WitnessStore
        Data.KeyContainer
