cabal-version: >=1.14
name: shapes
version: 0.1.0.0
-- synopsis:
-- description:
copyright: (c) 2017 Ashley Yakeley
license: GPL-2
license-file: LICENSE
author: Ashley Yakeley
maintainer: ashley@semantic.org
category: Data
build-type: Simple
-- extra-source-files:

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        InstanceSigs
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        constraints,
        mono-traversable,
        comonad,
        lattices,
        transformers,
        hashable,
        containers,
        unordered-containers,
        bytestring,
        cereal,
        text,
        cereal-text,
        random,
        countable,
        witness,
        open-witness
    exposed-modules:
        Data.Filterable
        Data.Witness.All
        Control.Constrained.Category
        Control.Monad.Trans.Constraint
        Control.Monad.Trans.Tunnel
        Control.Monad.Trans.Unlift
        Control.Monad.Trans.Compose
        Control.Monad.Trans.Free
        Control.Monad.Trans.StackIO
        Data.CatFunctor
        Data.Result
        Data.MonadOne
        Data.HasNewValue
        Data.Injection
        Data.Bijection
        Data.Lens
        Data.Store
        Data.ConstFunction
        Data.Codec
        Data.Compose
        Data.KeyContainer
        Data.FiniteSet
        Shapes
    other-modules:
        Shapes.Import
