cabal-version: >=1.14
name: transformers-extra
version: 0.1.0.0
-- synopsis:
-- description:
copyright: (c) 2017 Ashley Yakeley
license: GPL-2
license-file: LICENSE
author: Ashley Yakeley
maintainer: ashley@semantic.org
category: Data
build-type: Simple
-- extra-source-files:

library
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        InstanceSigs
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        constraints,
        transformers
    exposed-modules:
        Control.Monad.Trans.Constraint
        Control.Monad.Trans.Tunnel
        Control.Monad.Trans.Unlift
        Control.Monad.Trans.Compose
        Control.Monad.Trans.Free
        Control.Monad.Trans.StackIO
