cabal-version: >=1.14
name: truth-gtk
version: 0.1
copyright: (c) 2017 Ashley Yakeley
license: GPL-2
license-file: LICENSE
author: Ashley Yakeley
maintainer: <ashley@semantic.org>
build-type: Simple


flag build-examples
    Description: Build examples
    Default: False

library
    hs-source-dirs: lib
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        text,
        transformers,
        mono-traversable,
        countable,
        witness,
        open-witness,
        glib,
        gtk3,
        shapes,
        truth-core
    exposed-modules:
        Truth.UI.GTK
    other-modules:
        Truth.UI.GTK.Useful
        Truth.UI.GTK.GView
        Truth.UI.GTK.Window
        Truth.UI.GTK.CSS
        Truth.UI.GTK.Icon
        Truth.UI.GTK.Labelled
        Truth.UI.GTK.Maybe
        Truth.UI.GTK.Switch
        Truth.UI.GTK.CheckButton
        Truth.UI.GTK.Option
        Truth.UI.GTK.Entry
        Truth.UI.GTK.Text
        Truth.UI.GTK.Tuple
        Truth.UI.GTK.Pages
        Truth.UI.GTK.Table
        Truth.UI.GTK.Drag

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        bytestring,
        transformers,
        mono-traversable,
        countable,
        witness,
        open-witness,
        glib,
        gtk3,
        shapes,
        truth-core,
        truth-gtk,
        QuickCheck,
        tasty,
        tasty-hunit
    main-is: Main.hs
    other-modules:

executable truth-text
    if !flag(build-examples)
        buildable: False
    hs-source-dirs: text
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        filepath,
        bytestring,
        uuid,
        aeson,
        glib,
        gtk3,
        shapes,
        truth-core,
        truth-gtk,
        optparse-applicative
    main-is: Main.hs
    other-modules:

executable truth-soup
    if !flag(build-examples)
        buildable: False
    hs-source-dirs: soup
    default-language: Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        Arrows
        ConstraintKinds
        DataKinds
        DefaultSignatures
        EmptyDataDecls
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        ForeignFunctionInterface
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        ImplicitParams
        KindSignatures
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        NoImplicitPrelude
        PatternGuards
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TypeApplications
        TypeFamilies
        TypeInType
        TypeOperators
        TypeSynonymInstances
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns
    ghc-options:
        -Werror
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Wnoncanonical-monad-instances
        -Wnoncanonical-monadfail-instances
    build-depends:
        base >= 4.9 && < 5,
        filepath,
        bytestring,
        uuid,
        aeson,
        glib,
        gtk3,
        shapes,
        truth-core,
        truth-gtk,
        optparse-applicative
    main-is: Main.hs
    other-modules:
        Soup
        Soup.Note
        Soup.Edit
        Soup.UI
