[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pinafore-lexer"
version="0.4.0"
description="Pygments lexer for Pinafore"
authors=[{name="Ashley Yakeley",email="ashley@semantic.org"}]
dependencies=["Pygments>=2.0.1"]
license = {text = "GPL-2"}

[project.entry-points."pygments.lexers"]
pinafore="pinafore_lexer:PinaforeLexer"
