[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="pinafore-lexer"
version="0.4.1"
description="Pygments lexer for Pinafore"
authors=[{name="Ashley Yakeley",email="ashley@semantic.org"}]
dependencies=["Pygments>=2.0.1"]
license = {text = "GPL-2"}

[project.urls]
Homepage = "https://github.com/AshleyYakeley/Truth"

[tool.setuptools.package-data]
pinafore_lexer = ["syntax-data.json"]

[project.entry-points."pygments.lexers"]
pinafore="pinafore_lexer:PinaforeLexer"
