[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name="pinafore_lexer"
dynamic = ["version"]
description="Pygments lexer for Pinafore"
authors=[{name="Ashley Yakeley",email="ashley@semantic.org"}]
dependencies=["Pygments>=2.0.1"]
license = "GPL-2.0-only"

[project.urls]
Homepage = "https://github.com/AshleyYakeley/Truth"

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
include = ["pinafore_lexer*"]

[tool.setuptools.package-data]
pinafore_lexer = ["syntax-data.json"]

[project.entry-points."pygments.lexers"]
pinafore="pinafore_lexer:PinaforeLexer"
